<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <EditText
        android:id="@+id/entry_field"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="@null"
        android:ellipsize="start"
        android:gravity="end"
        android:maxLines="2"
        android:textSize="40sp"
        android:inputType="textMultiLine"
        tools:text="2+7" />

    <TextView
        android:id="@+id/result_field"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:gravity="end"
        android:ellipsize="end"
        android:textSize="40sp"
        android:textColor="@color/light_grey"
        android:maxLines="2"
        tools:text="9"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_bracket"
            android:text="@string/bracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@null"
            android:padding="0dp"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:foreground="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_back" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button.Red"
                android:id="@+id/btn_clear"
                android:text="@string/clear"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_sign"
                android:text="@string/sign"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button.GreenText"
                android:id="@+id/btn_percent"
                android:text="@string/percent"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button.GreenText"
                android:id="@+id/btn_division"
                android:text="@string/division"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_7"
                android:text="@string/_7"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_8"
                android:text="@string/_8"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_9"
                android:text="@string/_9"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button.GreenText"
                android:id="@+id/btn_multiply"
                android:text="@string/multiply"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_4"
                android:text="@string/_4"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_5"
                android:text="@string/_5"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_6"
                android:text="@string/_6"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button.GreenText"
                android:id="@+id/btn_subtract"
                android:text="@string/subtract"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_1"
                android:text="@string/_1"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_2"
                android:text="@string/_2"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button"
                android:id="@+id/btn_3"
                android:text="@string/_3"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button.GreenText"
                android:id="@+id/btn_add"
                android:text="@string/add"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.CalculatorApp.Button"
                    android:id="@+id/btn_0"
                    android:text="@string/_0"
                    android:layout_marginStart="0dp"
                    />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.CalculatorApp.Button"
                    android:id="@+id/btn_dot"
                    android:text="@string/dot"
                    android:layout_marginEnd="0dp"
                    />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.CalculatorApp.Button.Green"
                android:layout_weight="1"
                android:id="@+id/btn_result"
                android:text="@string/result"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>